--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,15 @@
 
-/* 
+.row{
+padding-top: 30px;
+padding-bottom: 100px;
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
 
-*/
+}
+
+.jumbotron {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.header {
+    margin-top: 20px;
+}
